--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
   background: $off-black;
   color: white;
-  margin-bottom: $xl-size;
   padding: $m-size 0;
+  margin-bottom: $m-size;
 }
 
 // BEM Block Element Modifier naming convention
@@ -16,4 +16,10 @@
   font-size: $m-size;
   font-weight: 500;
   margin: 0;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .header {
+    margin-bottom: $xl-size;
+  }
 }
